--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -71,9 +71,9 @@ x-airflow-common:
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
     # WARNING: Use _PIP_ADDITIONAL_REQUIREMENTS option ONLY for a quick checks
     # for other purpose (development, test and especially production usage) build/extend Airflow image.
-    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:- PyPDF2 requests tiktoken openai openpyxl pinecone-client}
+    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:- PyPDF2 requests tiktoken openai openpyxl pinecone-client jose}
     AIRFLOW__CORE__ENABLE_XCOM_PICKLING: 'true'
-    OPENAI_KEY: ${OPENAI_KEY}
+    OPENAI_KEY: ${OPEN_API_KEY}
     PINECONE_API_KEY: ${PINECONE_API_KEY}
     PINECONE_ENV: ${PINECONE_ENV}
   volumes:
@@ -134,7 +134,7 @@ services:
       <<: *airflow-common-env
       # Required to handle warm shutdown of the celery workers properly
       # See https://airflow.apache.org/docs/docker-stack/entrypoint.html#signal-propagation
-      OPENAI_KEY: ${OPENAI_KEY}
+      OPENAI_KEY: ${OPEN_API_KEY}
       PINECONE_API_KEY: ${PINECONE_API_KEY}
       PINECONE_ENV: ${PINECONE_ENV}
     depends_on:
@@ -176,7 +176,7 @@ services:
       <<: *airflow-common-env
       # Required to handle warm shutdown of the celery workers properly
       # See https://airflow.apache.org/docs/docker-stack/entrypoint.html#signal-propagation
-      OPENAI_KEY: ${OPENAI_KEY}
+      OPENAI_KEY: ${OPEN_API_KEY}
       PINECONE_API_KEY: ${PINECONE_API_KEY}
       PINECONE_ENV: ${PINECONE_ENV}
       DUMB_INIT_SETSID: "0"
